--- a/index.html
+++ b/index.html
@@ -2,39 +2,43 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>grid-layout</title>
+  <title>Grid Layout</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
 </head>
-
-<link href="css/main.css" rel="stylesheet">
-<link href="css/grid.css" rel="stylesheet">
 <body>
 
 <div class="grid">
-
-  <div class="unit">
+  <div class="unit xs-1 s-1 m-1 l-2-3">
   <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
 </div>
-<div class="unit">
+<div class="unit xs-1 s-1 m-1 l-2-3">
 <h1>The Seven Wonders of the Ancient World</h1>
 <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
 <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
 </div>
 
-  <div class="unit">
+  <div class="unit xs-1 s-1 m-1-3 l-2-3">
+    <figure>
   <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
+<figcaption>
 <h2>Temple of Artemis</h2>
+</figcaption>
+</figure>
 <dl>
   <dt>Date of construction:</dt>
   <dd>Circa 550 BC</dd>
   <dt>Builders:</dt>
      <dd>Greeks</dd>
   <dt>Location:</dt>
-    <dd>Selçuk,Turkey</dd>
+    <dd>Selçuk, Turkey</dd>
 </dl>
 </div>
 
 
-  <div class="unit">
+  <div class="unit xs-1 s-1 m-1-3 l-2-3">
   <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
 <h2>Colossus of Rhodes</h2>
 <dl>
@@ -47,7 +51,7 @@
 </dl>
 </div>
 
-  <div class="unit">
+  <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
   <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
   <h2>Hanging Gardens of Babylon</h2>
 <dl>
